ba059a3 chore(translations): sync Ukrainian translations from transifex (master)

--- a/i18n/i18n_app_fr.properties
+++ b/i18n/i18n_app_fr.properties
@@ -1,220 +1,220 @@
 about=A propos
-add_legend=Ajouter l\u00E9gende
+add_legend=Ajouter légende
 add_new=Ajouter nouvelle
 address=Adresse
 add_to_dashboard=Ajouter au tableau de bord
-aggregation_type=Type d'agr\u00E9gation
-allow_external_access=Permettre l'acc\u00E8s externe
-and_or_lower_than=Et/ou inf\u00E9rieur
+aggregation_type=Type d'agrégation
+allow_external_access=Permettre l'accès externe
+and_or_lower_than=Et/ou inférieur
 attribution=Attribution
 automatic=Automatique
 average=Moyenne
 bimonthly=Bimestriel
-boundary_layer=Fronti\u00E8re
-by_data_element=Par \u00E9l\u00E9ment de donn\u00E9e
+boundary_layer=Couche frontière
+by_data_element=Par élément de donnée
 cancel=Annuler
 can_edit_and_view=Peut modifier et voir
 can_view=Peut voir
 chart=Graphique
-classes_method=Classes/m\u00E9thode
+classes_method=Classes/méthode
 clear=Effacer
-clear_map=R\u00E9initialiser la carte
+clear_map=Réinitialiser la carte
 clustering=Clustering (regroupement)
 code=Code
 color_scale=Rampe couleurs
-coordinate_field=Champ de coordonn\u00E9es
-coordinates=Coordonn\u00E9es
-coordinates_could_not_be_loaded=Les coordonn\u00E9es n'ont pas pu \u00EAtre charg\u00E9es
+coordinate_field=Champ de coordonnées
+coordinates=Coordonnées
+coordinates_could_not_be_loaded=Les coordonnées n'ont pas pu être chargées
 count=Compte
-create=Cr\u00E9er
-created_by=Cr\u00E9\u00E9 par
-current_legends=L\u00E9gendes courantes
+create=Créer
+created_by=Créé par
+current_legends=Légendes courantes
 daily=Quotidien
-data=Donn\u00E9es
-data_and_periods=Donn\u00E9es et p\u00E9riodes
-dataelement=El\u00E9ment de donn\u00E9e
-dataelement_group=Groupe d'\u00E9l\u00E9ments de donn\u00E9e
-dataset=Ensemble de donn\u00E9es
+data=Données
+data_and_periods=Données et périodes
+dataelement=Elément de données
+dataelement_group=Groupe d'éléments de donnée
+dataset=Ensemble de données
 delete=Supprimer
 delete_favorite=Supprimer favoris
-details=D\u00E9tails
-download=T\u00E9l\u00E9charger
-download_map_as_png=T\u00E9l\u00E9charger en PNG
+details=Détails
+download=Télécharger
+download_map_as_png=Télécharger en PNG
 drill_down_one_level=Descendre d'un niveau
 drill_up_one_level=Monter d'un niveau
-duplicate=Copier
+duplicate=Dupliquer
 earthengine_layer=Google Earth Engine
-earth_engine_layer_legend=L\u00E9gende Google Earth Engine
+earth_engine_layer_legend=Légende Google Earth Engine
 elevation=Altitude
 edit_layer=Modifier la couche
-edit_legend=Editer la l\u00E9gende
+edit_legend=Editer la légende
 email=Adresse e-mail
 end_date=Date de fin
-end_value_should_be_bigger_than_start_value=La valeur finale doit \u00EAtre sup\u00E9rieurla valeur de d\u00E9part
-equal_counts=Nombres \u00E9gaux
-equal_intervals=Intervalles \u00E9gaux
-event_data_item=Event data item
-event_data_items=Event data items
-event_layer=Couche \u00E9v\u00E8nements
-event_location=Lieu de l'\u00E9v\u00E8nement
-event_time=Date de l'\u00E9v\u00E8nement
+end_value_should_be_bigger_than_start_value=La valeur finale doit être supérieur à la valeur de départ
+equal_counts=Nombres égaux
+equal_intervals=Intervalles égaux
+event_data_item=Elément de données évènement
+event_data_items=Eléments de données évènement
+event_layer=Couche évènements
+event_location=Lieu de l'évènement
+event_time=Date de l'évènement
 external_layer=Couche externe
-external_layer_legend=L\u00E9gende couche externe
-facility_layer=D'\u00E9tablissements
-facility_layer_export_currently_not_supported=L'exportation de la couche d'\u00E9tablissements n'est pas support\u00E9 actuellement
-facility_layer_legend=L\u00E9gende couche d'\u00E9tablissements
+external_layer_legend=Légende couche externe
+facility_layer=Couche établissements
+facility_layer_export_currently_not_supported=L'exportation de la couche d'établissements n'est pas supportée actuellement
+facility_layer_legend=Légende couche d'établissements
 favorite_name=Nom du favori
-favorite_outdated_create_new=Le favori n'est pas jour. veuillez cr\u00E9er un nouveau
+favorite_outdated_create_new=Le favori n'est pas à jour - veuillez en créer un nouveau
 favorites=Favoris
 filter=Filtrer
 filter_by_value=Filtrer par valeur
-financial_april=Financi\u00E8re Avril
-financial_july=Financi\u00E8re Juillet
-financial_oct=Financi\u00E8re Octobre
-google_hybrid=Google Hybrid
+financial_april=Financière Avril
+financial_july=Financière Juillet
+financial_oct=Financière Octobre
+google_hybrid=Google Hybride
 google_streets=Google Streets
 go_to_charts=Aller dans les graphiques
-go_to_pivot_tables=Aller dans les tableaux crois\u00E9s
-greater_than=sup\u00E9rieu 
+go_to_pivot_tables=Aller dans les tableaux croisés
+greater_than=Supérieur à
 group=Groupe
-group_nearby_events=Grouper les \u00E9v\u00E8nements proches
+group_nearby_events=Grouper les évènements proches
 groups=Groupes
 groupset=Ensemble de groupes
-has_no_orgunits=n'a pas d'unit\u00E9 d'organisation
-high_color_size=Couleur \u00E9l\u00E9v\u00E9e / taille
+has_no_orgunits=n'a pas d'unité d'organisation
+high_color_size=Couleur / taille élévée
 highlight_color=Couleur de surbrilance
 high_size=Taille max.
 home=Accueil
 indicator=Indicateur
 indicator_group=Groupe d'indicateurs
 information=Information
-infrastructural_data=Donn\u00E9es d'insfrastructure
-invalid_parameter=Param\u00E8tre non valable
-item_type=Type d'\u00E9l\u00E9ment
+infrastructural_data=Données d'insfrastructure
+invalid_parameter=Paramètre non valable
+item_type=Type d'élément
 landcover=Couverture du sol
 last_2_sixmonths=2 derniers six-mois
 last_3_months=3 derniers mois
 last_4_quarters=4 derniers trimestres
-last_4_weeks=4 derni\u00E8res semaines
-last_5_financial_years=5 ann\u00E9es financi\u00E8res derni\u00E8res
+last_4_weeks=4 dernières semaines
+last_5_financial_years=5 années financières dernières
 last_6_bimonths=6 derniers bimestres
 last_6_months=6 derniers mois
 last_12_months=12 derniers mois
-last_12_weeks=12 derni\u00E8res semaines
-last_52_weeks=52 derni\u00E8res semaines
+last_12_weeks=12 dernières semaines
+last_52_weeks=52 dernières semaines
 last_bimonth=Dernier bimestre
-last_financial_year=Derni\u00E8re ann\u00E9e financi\u00E8re
+last_financial_year=Dernière année financière
 last_month=Dernier mois
 last_quarter=Dernier trimestre
 last_sixmonth=Dernier semestre
-last_week=Derni\u00E8re semaine
-last_5_years=5 derni\u00E8res ann\u00E9es
-last_year=Derni\u00E8re ann\u00E9e
+last_week=Dernière semaine
+last_5_years=5 dernières années
+last_year=Dernière année
 latitude=Latitude
 layer=Couche
 layers=Couches
 layer_stack_transparency=Superposition de couche / Transparence
-legend_name=Nom de l\u00E9gende
-legend_name_is_required=Le nom de la l\u00E9gende est obligatoire
-legends=L\u00E9gendes
-legendset=Jeu de l\u00E9gende
-legend_sets_available=Jeu de l\u00E9gendes disponibles
-legend_set_name=Nom de jeu de l\u00E9gendes
-legendsets=Jeux de l\u00E9gendes
+legend_name=Nom de légende
+legend_name_is_required=Le nom de la légende est obligatoire
+legends=Légendes
+legendset=Jeu de légende
+legend_sets_available=Jeu de légendes disponibles
+legend_set_name=Nom de jeu de légendes
+legendsets=Jeux de légendes
 legend_symbolizer=Symboliseur
-legend_type=Type de l\u00E9gende
+legend_type=Type de légende
 level=Niveau
 longitude=Longitude
 low_color_size=Couleur faible / taille
 low_size=Taille min.
-manage_favorites=G\u00E9rer les favoris
+manage_favorites=Gérer les favoris
 map=Carte
 max=Max
 min=Min
-min_max_c=Min/max \u00C2\u00B0C
+min_max_c=Min/max Â°C
 min_max_elevation=Min/max altitude
 min_max_people=Min/max personnes
-min_max_rainfall=Min/max pluviom\u00E9trie
+min_max_rainfall=Min/max pluviométrie
 min_max_value=Valeur Min/max
 monthly=Mensuel
 name=Nom
 next=Suivant
-nighttime_lights=Lumi\u00E8res nocturnes
-no=non
-no_groupset_selected=Aucun ensemble de groupes n'est s\u00E9lectionn\u00E9
-no_map_to_save=Aucune carte \u00E0 enregistrer
+nighttime_lights=Lumières nocturnes
+no=Non
+no_groupset_selected=Aucun ensemble de groupes n'est sélectionné
+no_map_to_save=Aucune carte à enregistrer
 none=Aucun
-no_event_coordinates_found=Coordonn\u00E9es d'\u00E9v\u00E8nement non trouv\u00E9es
-no_organisation_unit_levels=Aucun niveau d'unit\u00E9s d'organisation
-no_organisation_units_specified=Unit\u00E9s d'organisation non sp\u00E9cifi\u00E9es
-no_period_selected=Aucune p\u00E9riode n'est s\u00E9lectionn\u00E9
-no_program_stage_selected=Aucun stade de programme s\u00E9lectionn\u00E9
-no_selected_items=Aucun \u00E9l\u00E9ment s\u00E9lectionn\u00E9
-no_system_info_found=Info syst\u00E8me non trouv\u00E9e
-no_valid_coordinates_found=Aucune coordonn\u00E9e n'est trouv\u00E9e
+no_event_coordinates_found=Coordonnées d'évènement non trouvées
+no_organisation_unit_levels=Aucun niveau d'unités d'organisation
+no_organisation_units_specified=Unités d'organisation non spécifiées
+no_period_selected=Aucune période n'est sélectionné
+no_program_stage_selected=Aucun stade de programme sélectionné
+no_selected_items=Aucun élément sélectionné
+no_system_info_found=Info système non trouvée
+no_valid_coordinates_found=Coordonnées valides non trouvées
 open_last_chart=Ouvrir dernier graphique
 open_last_table=Ouvrir dernier tableau
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Ouvrir cette carte en tant que graphique
 open_this_map_as_table=Ouvrir cette carte en tant que tableau
 options=Options
-organisation_unit=Unit\u00E9 d'organisation
-organisation_unit_group_icons=Ic\u00F4nes du groupe d'unit\u00E9s d'organisation
-organisationunit_groupset=Ensemble de groupes d'unit\u00E9s d'organisation
-organisation_units=Unit\u00E9s d'organisation
-organisationunit_search=Niveau d'unit\u00E9 d'organisation
+organisation_unit=Unité d'organisation
+organisation_unit_group_icons=Icônes du groupe d'unités d'organisation
+organisationunit_groupset=Ensemble de groupes d'unités d'organisation
+organisation_units=Unités d'organisation
+organisationunit_search=Niveau d'unité d'organisation
 osm_light=OSM Light
 overwrite=Ecraser
 overwrite_favorite=Ecraser favori
 page=Page
-parent_unit=Unit\u00E9 parente
-period=P\u00E9riode
-period_type=Type de p\u00E9riode
-phone_number=Num\u00E9ro de t\u00E9l\u00E9phone
+parent_unit=Unité parente
+period=Période
+period_type=Type de période
+phone_number=Numéro de téléphone
 placement=Placement
-please_create_map_first=Veuillez d'abord cr\u00E9er la carte
+please_create_map_first=Veuillez d'abord créer la carte
 please_enter_a_name=Veuillez saisir un nom
 please_enter_map_title=Veuillez saisir le titre de la carte
 point_color=Couleur des points
 point_radius=Taille des points
-population_density=Densit\u00E9 de population
-precipitation=Pr\u00E9cipitation
-predefined=Pr\u00E9d\u00E9fini
-previous=Pr\u00E9c\u00E9dent
+population_density=Densité de population
+precipitation=Précipitation
+predefined=Prédéfini
+previous=Précédent
 program=Program
 program_indicators=Program indicators
-public_access=Acc\u00E8s public
+public_access=Accès public
 quarterly=Trimestriel
 relative=Relative
 relocate=Relocaliser
-relocate_facility=D\u00E9placer l'\u00E9tablissement
+relocate_facility=Déplacer l'établissement
 remove=Supprimer
 rename=Renommer
 reporting_rates=Taux de rapport
-revision=R\u00E9vision
+revision=Révision
 search=Chercher
 search_for_favorites=Chercher des favoris
 search_for_user_groups=Chercher des groupes d'utilisateurs
-select=S\u00E9lectionner
-select_groups=S\u00E9lectionner des groupes
-selection_mode=S\u00E9lectionner le mode
-select_dataset=S\u00E9lectionnez ensemble de donn\u00E9es
-select_layer=S\u00E9lectionnez couche
-select_layer_from_google_earth_engine=S\u00E9lectionnez la couche de Google Eart Engine
-select_levels=S\u00E9lectionner les niveaux
-select_organisation_unit_groups=S\u00E9lectionner les groupes d'unit\u00E9 d'organisation
-select_organisation_unit_levels=S\u00E9lectionner les niveaux d'unit\u00E9 d'organisation
-select_organisation_units=S\u00E9lectionner les unit\u00E9s d'organisation
-select_period=S\u00E9lectionnez p\u00E9riode
-select_program=S\u00E9lectionner le programme
-select_service=S\u00E9lectionnez service
-select_stage=S\u00E9lectionner l'\u00E9tape
-select_sub_units=S\u00E9lectionner sous-unit\u00E9s
-select_year=S\u00E9lectionnez ann\u00E9e
+select=Sélectionner
+select_groups=Sélectionner des groupes
+selection_mode=Sélectionner le mode
+select_dataset=Sélectionnez ensemble de données
+select_layer=Sélectionnez couche
+select_layer_from_google_earth_engine=Sélectionnez la couche de Google Earth Engine
+select_levels=Sélectionner les niveaux
+select_organisation_unit_groups=Sélectionner les groupes d'unité d'organisation
+select_organisation_unit_levels=Sélectionner les niveaux d'unité d'organisation
+select_organisation_units=Sélectionner les unités d'organisation
+select_period=Sélectionnez période
+select_program=Sélectionner le programme
+select_service=Sélectionnez service
+select_stage=Sélectionner l'étape
+select_sub_units=Sélectionner sous-unités
+select_year=Sélectionnez année
 service_url=URL du service
 share=Partager
 share_with_other_people=Partager avec d'autres
-sharing_settings=Param\u00E8tres de partage
+sharing_settings=Paramètres de partage
 show=Afficher
 show_circular_area=Afficher une zone circulaire avec rayon (m)
 show_information_sheet=Afficher la fiche d'information
@@ -222,52 +222,56 @@ show_lon_lat=Afficher longitude/latitude
 sixmonthly=Semestriel
 sixmonthly_april=Semestriel Avril
 stage=Etape
-start_date=Date de d\u00E9but
-start_end_dates=Dates d\u00E9but-fin
-start_end_value=Valeur de d\u00E9but/fin
-stddev=\u00C9cart-type
-steps=\u00C9tapes
+start_date=Date de début
+start_end_dates=Dates début-fin
+start_end_value=Valeur de début/fin
+stddev=Écart-type
+steps=Étapes
 style=Style
-sub_units=sous-unit\u00E9s
-sub_x2_units=Sous-unit\u00E9s-x2
+sub_units=Sous-unités
+sub_x2_units=Sous-unités-x2
 sum=Somme
 swap_lon_lat=Inverser long/lat
-symbol_layer=Couche d'\u00E9tablissements
+symbol_layer=Couche d'établissements
 table=Tableau
-temperature=Temp\u00E9rature
+temperature=Température
 text_filter=Filtre de texte
-thematic_layer=Th\u00E9matique
-thematic_layer_1_legend=L\u00E9gende couche th\u00E9matique 1
-thematic_layer_2_legend=L\u00E9gende couche th\u00E9matique 2
-thematic_layer_3_legend=L\u00E9gende couche th\u00E9matique 3
-thematic_layer_4_legend=L\u00E9gende couche th\u00E9matique 4
-this_bimonth=Ces 2 derni\u00E8res semaines
-this_financial_year=Ann\u00E9e fiscale en cours
+thematic_layer=Thématique
+thematic_layer_1_legend=Légende couche thématique 1
+thematic_layer_2_legend=Légende couche thématique 2
+thematic_layer_3_legend=Légende couche thématique 3
+thematic_layer_4_legend=Légende couche thématique 4
+this_bimonth=Ces 2 dernières semaines
+this_financial_year=Année fiscale en cours
 this_month=Ce mois-ci
 this_quarter=Ce trimestre
 this_sixmonth=Ce semestre
 this_week=Cette semaine
-this_year=Cette ann\u00E9e
-time_since_last_data_update=Temps \u00E9coul\u00E9 depuis derni\u00E8re mise \u00E0 jour
+this_year=Cette année
+time_since_last_data_update=Temps écoulé depuis dernière mise à jour
 today=Aujourd'hui
 totals=Totaux
-update=Mettre \u00E0 jour
+update=Mettre à jour
 username=Nom utilisateur
-user_is_not_assigned_to_any_organisation_units=L'utilisateur n'est assign\u00E9 \u00E0 aucune unit\u00E9 d'organisation
-user_organisation_unit=Unit\u00E9s d'organisation de l'utilisateur
+user_is_not_assigned_to_any_organisation_units=L'utilisateur n'est assigné à aucune unité d'organisation
+user_organisation_unit=Unités d'organisation de l'utilisateur
 user_ou=UO utilisateur
-user_sub_units=Sous-unit\u00E9s de l'utilisateur
-user_sub_x2_units=Sous-unit\u00E9s utilisateur x2
+user_sub_units=Sous-unités de l'utilisateur
+user_sub_x2_units=Sous-unités utilisateur x2
 value=Valeur
 value_type=Type de valeur
 variance=Variance
 version=Version
 weekly=Hebdomadaire
-write_interpretation=Ecrire une interpr\u00E9tation
-write_your_interpretation=Ecrire votre interpr\u00E9tation
+weekly_wednesday=Hebdomadaire (début mercredi)
+weekly_thursday=Hebdomadaire (début jeudi)
+weekly_saturday=Hebdomadaire (début samedi)
+weekly_sunday=Hebdomadaire (début dimanche)
+write_interpretation=Ecrire une interprétation
+write_your_interpretation=Ecrire votre interprétation
 yearly=Annuel
 yes=Oui
 yesterday=Hier
-you_can_not_select_organisation_units_below_the_selected_level=Vous ne pouvez pas s\u00E9lectionner d'unit\u00E9s d'organisation inf\u00E9rieures au niveau s\u00E9lectionn\u00E9
-you_do_not_have_access_to_all_items_in_this_favorite=Vous n'avez pas acc\u00E8s \u00E0 tous les \u00E9l\u00E9ments de ce favori
+you_can_not_select_organisation_units_below_the_selected_level=Vous ne pouvez pas sélectionner d'unités d'organisation inférieures au niveau sélectionné
+you_do_not_have_access_to_all_items_in_this_favorite=Vous n'avez pas accès à tous les éléments de ce favori
 
