--- a/i18n/i18n_app_zh.properties
+++ b/i18n/i18n_app_zh.properties
@@ -1,49 +1,277 @@
+about=\u5173\u4e8e
+add_legend=Add legend
+add_new=\u65b0\u52a0
 address=\u5730\u5740
-add_to_dashboard=\u6DFB\u52A0\u5230\u4EEA\u8868\u76D8
-automatic=\u81EA\u52A8
-boundary_layer=\u8FB9\u754C\u5C42
-cancel=\u53D6\u6D88
-clear=\u6E05\u9664
-code=\u4EE3\u7801
-dataelement=\u6570\u636E\u5143
+add_to_dashboard=\u6dfb\u52a0\u5230\u4eea\u8868\u76d8
+aggregation_type=Aggregation type
+allow_external_access=Allow external access
+and_or_lower_than=And/or lower than
+attribution=Attribution
+automatic=\u81ea\u52a8
+average=Average
+bimonthly=\u6bcf\u4e24\u6708
+boundary_layer=\u8fb9\u754c\u5c42
+by_data_element=By data element
+cancel=\u53d6\u6d88
+can_edit_and_view=\u53ef\u7f16\u8f91\u548c\u67e5\u770b
+can_view=\u53ef\u67e5\u770b
+chart=\u56fe\u8868
+classes_method=Classes / method
+clear=\u6e05\u9664
+clear_map=Clear map
+clustering=Clustering
+code=\u4ee3\u7801
+color_scale=Color scale
+coordinate_field=Coordinate field
+coordinates=\u5750\u6807
+coordinates_could_not_be_loaded=Coordinates could not be loaded
+count=\u8ba1\u6570
+create=\u521b\u5efa
+created_by=Created by
+current_legends=Current legends
+daily=\u6bcf\u65e5
+data=\u6570\u636e
+data_and_periods=Data and periods
+dataelement=\u6570\u636e\u5143
+dataelement_group=\u6570\u636e\u5143\u7ec4
+dataset=\u6570\u636e\u96c6
 delete=\u5220\u9664
-edit_layer=\u7F16\u8F91\u56FE\u5C42
-email=\u90AE\u4EF6
-end_date=\u7ED3\u675F\u65E5\u671F
-equal_intervals=\u5E73\u7B49\u95F4\u9694
-facility_layer=\u673A\u6784\u5C42
-favorites=\u6536\u85CF\u5939
-filter=\u7B5B\u9009
-groups=\u7EC4
-groupset=\u7EC4\u96C6
-has_no_orgunits=\u6CA1\u6709\u7EC4\u7EC7\u673A\u6784
-highlight_color=\u9AD8\u4EAE\u8272\u5F69
+delete_favorite=\u5220\u9664\u504f\u597d
+details=\u8be6\u60c5
+download=\u4e0b\u8f7d
+download_map_as_png=Download map as PNG
+drill_down_one_level=Drill down one level
+drill_up_one_level=Drill up one level
+duplicate=\u91cd\u590d\u7684
+earthengine_layer=Google Earth Engine
+earth_engine_layer_legend=Google Earth Engine legend
+elevation=Elevation
+edit_layer=\u7f16\u8f91\u56fe\u5c42
+edit_legend=Edit legend
+email=\u90ae\u4ef6
+end_date=\u7ed3\u675f\u65e5\u671f
+end_value_should_be_bigger_than_start_value=End value should be bigger than start value
+equal_counts=Equal counts
+equal_intervals=\u5e73\u7b49\u95f4\u9694
+event_data_item=Event data item
+event_data_items=Event data items
+event_layer=Event layer
+event_location=Event location
+event_time=Event time
+external_layer=External layer
+external_layer_legend=External layer legend
+facility_layer=\u673a\u6784\u5c42
+facility_layer_export_currently_not_supported=Facility layer export currently not supported
+facility_layer_legend=Facility layer legend
+favorite_name=Favorite name
+favorite_outdated_create_new=Favorite is outdated - please create a new one
+favorites=\u6536\u85cf\u5939
+filter=\u7b5b\u9009
+filter_by_value=Filter by value
+financial_april=Financial year (Start April)
+financial_july=Financial year (Start July)
+financial_oct=Financial year (Start October)
+google_hybrid=Google Hybrid
+google_streets=Google Streets
+go_to_charts=Go to charts
+go_to_pivot_tables=Go to pivot tables
+greater_than=\u5927\u4e8e
+group=\u7ec4
+group_nearby_events=Group nearby events
+groups=\u7ec4
+groupset=\u7ec4\u96c6
+has_no_orgunits=\u6ca1\u6709\u7ec4\u7ec7\u673a\u6784
+high_color_size=High color / size
+highlight_color=\u9ad8\u4eae\u8272\u5f69
+high_size=High size
+home=\u9996\u9875
 indicator=\u6307\u6807
-indicator_group=\u6307\u6807\u7EC4
-infrastructural_data=\u57FA\u7840\u6570\u636E
-layer=\u56FE\u5C42
-legends=\u56FE\u4F8B
-legendset=\u56FE\u4F8B\u96C6
-legend_symbolizer=\u7B26\u53F7
-legend_type=\u56FE\u4F8B\u7C7B\u578B
-manage_favorites=\u7BA1\u7406\u559C\u597D
-map=\u5730\u56FE
-name=\u540D\u79F0
+indicator_group=\u6307\u6807\u7ec4
+information=Information
+infrastructural_data=\u57fa\u7840\u6570\u636e
+invalid_parameter=Invalid parameter
+item_type=Item type
+landcover=Landcover
+last_2_sixmonths=\u6700\u8fd1\u4e24\u4e2a\u516d\u4e2a\u6708
+last_3_months=\u6700\u8fd13\u4e2a\u6708
+last_4_quarters=\u6700\u8fd1\u56db\u5b63\u5ea6
+last_4_weeks=\u6700\u8fd1\u56db\u5468
+last_5_financial_years=\u6700\u8fd1\u4e94\u4e2a\u8d22\u653f\u5e74
+last_6_bimonths=Last 6 bi-months
+last_6_months=Last 6 months
+last_12_months=\u6700\u8fd112\u4e2a\u6708
+last_12_weeks=\u6700\u8fd112\u5468
+last_52_weeks=Last 52 weeks
+last_bimonth=Last bi-month
+last_financial_year=\u4e0a\u4e00\u8d22\u653f\u5e74
+last_month=\u4e0a\u6708
+last_quarter=\u6700\u8fd1\u4e00\u5b63
+last_sixmonth=\u6700\u8fd1\u516d\u4e2a\u6708
+last_week=\u4e0a\u5468
+last_5_years=\u6700\u8fd1\u4e94\u5e74
+last_year=\u53bb\u5e74
+latitude=\u7eac\u5ea6
+layer=\u56fe\u5c42
+layers=Layers
+layer_stack_transparency=Layer stack / opacity
+legend_name=Legend name
+legend_name_is_required=Legend name is required
+legends=\u56fe\u4f8b
+legendset=\u56fe\u4f8b\u96c6
+legend_sets_available=legend sets available
+legend_set_name=Legend set name
+legendsets=Legend sets
+legend_symbolizer=\u7b26\u53f7
+legend_type=\u56fe\u4f8b\u7c7b\u578b
+level=\u7b49\u7ea7
+longitude=\u7ecf\u5ea6
+low_color_size=Low color / size
+low_size=Low size
+manage_favorites=\u7ba1\u7406\u559c\u597d
+map=\u5730\u56fe
+max=\u6700\u5927\u503c
+min=\u6700\u5c0f
+min_max_c=Min/max °C
+min_max_elevation=Min/max elevation
+min_max_people=Min/max people
+min_max_rainfall=Min/max rainfall
+min_max_value=Min/max value
+monthly=\u6bcf\u6708
+name=\u540d\u79f0
+next=\u4e0b\u4e00\u4e2a
+nighttime_lights=Nighttime lights
 no=\u5426
-organisation_units=\u7EC4\u7EC7\u673A\u6784
-organisationunit_search=\u7EC4\u7EC7\u673A\u6784\u641C\u7D22
-period=\u5468\u671F
-period_type=\u5468\u671F\u7C7B\u578B
-phone_number=\u7535\u8BDD\u53F7\u7801
-please_enter_map_title=\u8BF7\u8F93\u5165\u4E00\u4E2A\u5730\u56FE\u6807\u9898
-predefined=\u5DF2\u9884\u5B9A\u4E49
-relocate=\u91CD\u65B0\u5B9A\u4F4D
-search=\u641C\u7D22
-show_information_sheet=\u663E\u793A\u4FE1\u606F\u8868\u683C
-start_date=\u5F00\u59CB\u65E5\u671F
-start_end_dates=\u5F00\u59CB-\u7ED3\u675F\u65E5\u671F
-symbol_layer=\u7B26\u53F7\u5C42
-text_filter=\u6587\u672C\u8FC7\u6EE4
-thematic_layer=\u4E13\u9898\u5C42
-update=\u66F4\u65B0
+no_groupset_selected=No group set selected
+no_map_to_save=No map to save
+none=\u65e0
+no_event_coordinates_found=No event coordinates found
+no_organisation_unit_levels=No organisation unit levels
+no_organisation_units_specified=No organisation units specified
+no_period_selected=No period selected
+no_program_stage_selected=No program stage selected
+no_selected_items=No selected items
+no_system_info_found=No system info found
+no_valid_coordinates_found=No valid coordinates found
+open_last_chart=Open last chart
+open_last_table=Open last table
+openstreetmap=OpenStreetMap
+open_this_map_as_chart=Open this map as chart
+open_this_map_as_table=Open this map as table
+options=\u9009\u9879
+organisation_unit=\u673a\u6784
+organisation_unit_group_icons=Organisation unit group icons
+organisationunit_groupset=\u7ec4\u7ec7\u673a\u6784\u7ec4\u96c6
+organisation_units=\u7ec4\u7ec7\u673a\u6784
+organisationunit_search=\u7ec4\u7ec7\u673a\u6784\u641c\u7d22
+osm_light=OSM Light
+overwrite=\u8986\u76d6
+overwrite_favorite=\u8986\u76d6\u504f\u597d
+page=\u9875
+parent_unit=Parent unit
+period=\u5468\u671f
+period_type=\u5468\u671f\u7c7b\u578b
+phone_number=\u7535\u8bdd\u53f7\u7801
+placement=Placement
+please_create_map_first=Please create a map first
+please_enter_a_name=\u8bf7\u8f93\u5165\u4e00\u4e2a\u540d\u79f0
+please_enter_map_title=\u8bf7\u8f93\u5165\u4e00\u4e2a\u5730\u56fe\u6807\u9898
+point_color=Point color
+point_radius=Point radius
+population_density=Population density
+precipitation=Precipitation
+predefined=\u5df2\u9884\u5b9a\u4e49
+previous=\u524d\u4e00
+program=\u9879\u76ee
+program_indicators=Program indicators
+public_access=\u516c\u5f00\u8bbf\u95ee
+quarterly=\u5b63\u5ea6
+relative=\u5173\u7cfb
+relocate=\u91cd\u65b0\u5b9a\u4f4d
+relocate_facility=Relocate facility
+remove=\u79fb\u9664
+rename=\u91cd\u547d\u540d
+reporting_rates=\u4e0a\u62a5\u7387
+revision=Revision
+search=\u641c\u7d22
+search_for_favorites=\u641c\u7d22\u504f\u597d
+search_for_user_groups=Search for user groups
+select=\u9009\u62e9
+select_groups=Select groups
+selection_mode=Selection mode
+select_dataset=Select dataset
+select_layer=Select layer
+select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_levels=Select levels
+select_organisation_unit_groups=Select organisation unit groups
+select_organisation_unit_levels=Select organisation unit levels
+select_organisation_units=Select organisation units
+select_period=\u9009\u62e9\u5468\u671f
+select_program=\u9009\u62e9\u9879\u76ee
+select_service=Select service
+select_stage=Select stage
+select_sub_units=Select sub-units
+select_year=Select year
+service_url=Service URL
+share=\u5206\u4eab
+share_with_other_people=Share with others
+sharing_settings=\u5171\u4eab\u8bbe\u7f6e
+show=\u663e\u793a
+show_circular_area=Show circular area with radius (m)
+show_information_sheet=\u663e\u793a\u4fe1\u606f\u8868\u683c
+show_lon_lat=Show longitude/latitude
+sixmonthly=\u516d\u4e2a\u6708
+sixmonthly_april=Six-monthly April
+stage=Stage
+start_date=\u5f00\u59cb\u65e5\u671f
+start_end_dates=\u5f00\u59cb-\u7ed3\u675f\u65e5\u671f
+start_end_value=Start/end value
+stddev=Standard deviation
+steps=Steps
+style=\u98ce\u683c
+sub_units=Sub-units
+sub_x2_units=Sub-x2-units
+sum=\u6c42\u548c
+swap_lon_lat=Swap longitude/latitude
+symbol_layer=\u7b26\u53f7\u5c42
+table=Table
+temperature=Temperature
+text_filter=\u6587\u672c\u8fc7\u6ee4
+thematic_layer=\u4e13\u9898\u5c42
+thematic_layer_1_legend=Thematic layer 1 legend
+thematic_layer_2_legend=Thematic layer 2 legend
+thematic_layer_3_legend=Thematic layer 3 legend
+thematic_layer_4_legend=Thematic layer 4 legend
+this_bimonth=This bi-month
+this_financial_year=This financial year
+this_month=This month
+this_quarter=This quarter
+this_sixmonth=This six-month
+this_week=This week
+this_year=\u4eca\u5e74
+time_since_last_data_update=Elapsed time since last data update
+today=\u4eca\u5929
+totals=\u603b\u5171
+update=\u66f4\u65b0
+username=\u7528\u6237\u540d
+user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+user_organisation_unit=User organisation unit
+user_ou=User OU
+user_sub_units=User sub-units
+user_sub_x2_units=User sub-x2-units
+value=\u503c
+value_type=\u503c\u7c7b\u578b
+variance=Variance
+version=\u7248\u672c
+weekly=\u6bcf\u5468
+weekly_wednesday=Weekly (Start Wednesday)
+weekly_thursday=Weekly (Start Thursday)
+weekly_saturday=Weekly (Start Saturday)
+weekly_sunday=Weekly (Start Sunday)
+write_interpretation=Write interpretation
+write_your_interpretation=Write your interpretation
+yearly=\u6bcf\u5e74
+yes=\u662f
+yesterday=\u6628\u5929
+you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
