--- a/i18n/i18n_app_km.properties
+++ b/i18n/i18n_app_km.properties
@@ -1,58 +1,58 @@
-about=Acerca
+about=\u17a2\u17c6\u1796\u17b8
 add_legend=Add legend
-add_new=Novo
-address=Endereço
-add_to_dashboard=Adicionar ao painel de instrumentos
+add_new=\u1794\u1793\u17d2\u1790\u17c2\u1798\u200b\u1790\u17d2\u1798\u17b8\u200b
+address=\u17a2\u17b6\u179f\u1799\u178a\u17d2\u178b\u17b6\u1793
+add_to_dashboard=Add to dashboard
 aggregation_type=Aggregation type
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automático
-average=Média
-bimonthly=Bimensal
-boundary_layer=Camada limite
+automatic=Automatic
+average=\u1795\u179b\u1798\u1792\u17d2\u1799\u1798
+bimonthly=\u179a\u17b6\u179b\u17cb\u1796\u17b8\u179a\u179f\u1794\u17d2\u178f\u17b6\u17a0\u17cd
+boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancelar
-can_edit_and_view=Consegue Editar e Visualizar
-can_view=Consegue ver
-chart=Gráfico
+cancel=\u1794\u17c4\u17c7\u1794\u1784\u17cb
+can_edit_and_view=Can edit and view
+can_view=Can view
+chart=Chart
 classes_method=Classes / method
-clear=Limpar
+clear=\u179b\u17bb\u1794\u1785\u17c4\u179b
 clear_map=Clear map
 clustering=Clustering
-code=Código
+code=Code
 color_scale=Color scale
 coordinate_field=Coordinate field
-coordinates=Coordenadas
+coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Contagem
-create=Criar
+count=\u1795\u179b\u179a\u17b6\u1794\u17cb
+create=Create
 created_by=Created by
 current_legends=Current legends
-daily=Diariamante
-data=Dados
+daily=\u179a\u17b6\u179b\u17cb\u200b\u1790\u17d2\u1784\u17c3
+data=Data
 data_and_periods=Data and periods
-dataelement=Elemento de dado
-dataelement_group=Grupo de elementos de dados
-dataset=Conjunto de dados
-delete=Apagar
-delete_favorite=Excluir favorito
-details=Detalhes
-download=Baixar
+dataelement=Data element
+dataelement_group=Data element group
+dataset=Data set
+delete=\u200b\u179b\u17bb\u1794\u200b
+delete_favorite=Delete favorite
+details=\u179b\u1798\u17d2\u17a2\u17b7\u178f
+download=Download
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
-duplicate=Duplicado
+duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
-edit_layer=Editar camadas
+edit_layer=Edit layer
 edit_legend=Edit legend
-email=E-mail
-end_date=Data fim
+email=Email
+end_date=\u1780\u17b6\u179b\u200b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1794\u1789\u17d2\u1785\u1794\u17cb\u200b
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
-equal_intervals=Intervalos iguais
+equal_intervals=Equal intervals
 event_data_item=Event data item
 event_data_items=Event data items
 event_layer=Event layer
@@ -60,13 +60,13 @@ event_location=Event location
 event_time=Event time
 external_layer=External layer
 external_layer_legend=External layer legend
-facility_layer=Camada de US
+facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
 facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite is outdated - please create a new one
-favorites=Favoritos
-filter=Filtro
+favorites=Favorites
+filter=Filter
 filter_by_value=Filter by value
 financial_april=Financial year (Start April)
 financial_july=Financial year (Start July)
@@ -75,75 +75,75 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
-greater_than=Maior do que
-group=Grupo
+greater_than=Greater than
+group=Group
 group_nearby_events=Group nearby events
-groups=Grupos
-groupset=Conjunto do grupo
-has_no_orgunits=não tem unidades organizacional
+groups=Groups
+groupset=Group set
+has_no_orgunits=has no organisation units
 high_color_size=High color / size
-highlight_color=Realce as cores
+highlight_color=Highlight color
 high_size=High size
-home=Origem
-indicator=Indicador
-indicator_group=Grupo do indicador
+home=Home
+indicator=Indicator
+indicator_group=Indicator group
 information=Information
-infrastructural_data=Dados de infra-estrutura
+infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Dois últimos semestres
-last_3_months=Últimos 3 meses
-last_4_quarters=Últimos 4 trimestres
-last_4_weeks=Últimas 4 semanas
-last_5_financial_years=Últimos 5 anos financeiros
-last_6_bimonths=Últimos 6 bi-meses
-last_6_months=Últimos 6 meses
-last_12_months=Últimos 12 meses
-last_12_weeks=Últimoas 12 semanas
+last_2_sixmonths=Last 2 six-months
+last_3_months=Last 3 months
+last_4_quarters=Last 4 quarters
+last_4_weeks=Last 4 weeks
+last_5_financial_years=Last 5 financial years
+last_6_bimonths=Last 6 bi-months
+last_6_months=Last 6 months
+last_12_months=Last 12 months
+last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
-last_financial_year=último ano financeiro
-last_month=Mês passado
-last_quarter=Último trimestre
-last_sixmonth=Últimos 6 meses
-last_week=Última semana
-last_5_years=Últimos 5 anos
-last_year=Ano passado
-latitude=Latitude
-layer=Camada
+last_financial_year=Last financial year
+last_month=Last month
+last_quarter=Last quarter
+last_sixmonth=Last six-month
+last_week=Last week
+last_5_years=Last 5 years
+last_year=Last year
+latitude=\u179a\u1799\u17c8\u1791\u1791\u17b9\u1784
+layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
-legends=Legendas
-legendset=Conjunto da legenda
+legends=Legends
+legendset=Legend set
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Tipo de legenda
-level=Nivel
-longitude=Longitude
+legend_type=Legend type
+level=Level
+longitude=\u179a\u1799\u17c8\u1794\u178e\u17d2\u178f\u17c4\u1799
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=Gerir favoritos
-map=Mapa
-max=Máx
-min=Min
+manage_favorites=Manage favorites
+map=Map
+max=\u17a2\u178f\u17b7\u1794\u179a\u1798\u17b6
+min=\u17a2\u1794\u17d2\u1794\u1794\u179a\u1798\u17b6
 min_max_c=Min/max Â°C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Mensal
-name=Nome
-next=Próximo
+monthly=Monthly
+name=\u1788\u17d2\u1798\u17c4\u17c7
+next=\u1794\u1793\u17d2\u1791\u17b6\u1794\u17cb
 nighttime_lights=Nighttime lights
-no=não
+no=\u1791\u17c1
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=Nenhum
+none=\u1782\u17d2\u1798\u17b6\u1793
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -157,45 +157,45 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Opções
-organisation_unit=Unidade organizacional
+options=Options
+organisation_unit=\u1795\u17d2\u1793\u17c2\u1780\u200b\u1793\u17c3\u200b\u17a2\u1784\u17d2\u1782\u1780\u17b6\u179a
 organisation_unit_group_icons=Organisation unit group icons
-organisationunit_groupset=Conjunto de Grupo Unidade Organizacional
-organisation_units=Unidades organizacionais
-organisationunit_search=Busca de unidade organizacional
+organisationunit_groupset=Organisation unit group set
+organisation_units=Organisation units
+organisationunit_search=Organisation unit search
 osm_light=OSM Light
-overwrite=Sobrescrever
+overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Periodo
-period_type=Tipo de periodo
-phone_number=Número de telefone
+period=\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+period_type=Period type
+phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
-please_enter_a_name=Por favor, indique um nome
-please_enter_map_title=Digite um título do mapa
+please_enter_a_name=Please enter a name
+please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
-predefined=Predefinido
-previous=Previous
-program=Programa
+predefined=Predefined
+previous=\u1798\u17bb\u1793
+program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Trimestral
-relative=Relativo
-relocate=Realocar
+quarterly=Quarterly
+relative=\u1791\u17c6\u1793\u17b6\u1780\u17cb\u1791\u17c6\u1793\u1784
+relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remover
-rename=Renomear
-reporting_rates=Taxas de relatório
+remove=\u1799\u1780\u1785\u17c1\u1789
+rename=\u1794\u17d2\u178a\u17bc\u179a\u200b\u1788\u17d2\u1798\u17c4\u17c7
+reporting_rates=Reporting rates
 revision=Revision
-search=Pesquisar
+search=\u179f\u17d2\u179c\u17c2\u1784\u179a\u1780
 search_for_favorites=Search for favorites
-search_for_user_groups=Pesquisar por grupos de utilizadores
-select=Seleccione
+search_for_user_groups=Search for user groups
+select=\u1787\u17d2\u179a\u17be\u179f\u200b\u179a\u17be\u179f
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -205,38 +205,38 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=Seleccione o período
-select_program=Seleccione Programa
+select_period=\u1787\u17d2\u179a\u17be\u179f\u179a\u17be\u179f\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=Partilhar
+share=\u1785\u17c2\u1780\u179a\u17c6\u179b\u17c2\u1780
 share_with_other_people=Share with others
-sharing_settings=Definições de partilha
-show=Mostrar
+sharing_settings=Sharing settings
+show=Show
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Mostrar folha de informação
+show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Semestral
-sixmonthly_april=Six-monthly April
+sixmonthly=\u179a\u17b6\u179b\u17cb\u1786\u1798\u17b6\u179f
+sixmonthly_april=\u1794\u17d2\u179a\u1785\u17b6\u17c6\u1786\u1798\u17b6\u179f\u200b\u1796\u17b8\u1781\u17c2\u1798\u17c1\u179f\u17b6
 stage=Stage
-start_date=Data inicio
-start_end_dates=Datas Iniciar-fim
+start_date=\u1780\u17b6\u179b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1785\u17b6\u1794\u17cb\u1795\u17d2\u178a\u17be\u1798\u200b
+start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
 steps=Steps
-style=Estílo
+style=\u200b\u179a\u1785\u1793\u17b6\u1794\u1791
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=Soma
+sum=\u1795\u179b\u200b\u1794\u17bc\u1780
 swap_lon_lat=Swap longitude/latitude
-symbol_layer=Camada da US
+symbol_layer=Facility layer
 table=Table
 temperature=Temperature
-text_filter=Filtro do texto
-thematic_layer=Camada temática
+text_filter=Text filter
+thematic_layer=Thematic layer
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
@@ -247,31 +247,31 @@ this_month=This month
 this_quarter=This quarter
 this_sixmonth=This six-month
 this_week=This week
-this_year=Este ano
+this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Hoje
-totals=Totais
-update=Actualizar
-username=Nome de utilizador
+today=Today
+totals=Totals
+update=\u1792\u17d2\u179c\u17be\u200b\u1794\u1785\u17d2\u1785\u17bb\u1794\u17d2\u1794\u1793\u17d2\u1793\u1797\u17b6\u1796
+username=\u1788\u17d2\u1798\u17c4\u17c7\u200b\u1782\u178e\u1793\u17b8
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
-value=Valor
-value_type=Tipo de Valor
+value=\u178f\u1798\u17d2\u179b\u17c3
+value_type=Value Type
 variance=Variance
-version=Versão
-weekly=Semanal
+version=\u1780\u17c6\u178e\u17c2
+weekly=\u179a\u17b6\u179b\u17cb\u200b\u179f\u1794\u17d2\u178a\u17b6\u17a0\u17cd
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Anual
-yes=Sim
-yesterday=Ontém
+yearly=Yearly
+yes=\u1794\u17b6\u1791/\u1785\u17b6\u179f
+yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
