--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -1,1 +1,277 @@
+about=\u1021\u1000\u103c\u1031\u102c\u1004\u103a\u1038\u1021\u101b\u102c
+add_legend=Add legend
+add_new=\u1021\u101e\u1005\u103a\u1011\u100a\u103a\u1037\u1001\u103c\u1004\u103a\u1038
+address=\u101c\u102d\u1015\u103a\u1005\u102c
+add_to_dashboard=Add to dashboard
+aggregation_type=Aggregation type
+allow_external_access=Allow external access
+and_or_lower_than=And/or lower than
+attribution=Attribution
+automatic=Automatic
+average=\u1015\u103b\u1019\u103a\u1038\u1019\u103b\u103e
+bimonthly=\u1014\u103e\u1005\u103a\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
+boundary_layer=Boundary layer
+by_data_element=By data element
+cancel=\u1006\u1000\u103a\u1019\u101c\u102f\u1015\u103a\u1010\u1031\u102c\u1037\u1015\u102b\u104b
+can_edit_and_view=\u1015\u103c\u1004\u103a\u1006\u1004\u103a\u104d\u1000\u103c\u100a\u103a\u1037\u101b\u103e\u102f\u1014\u102d\u102f\u1004\u103a\u101e\u100a\u103a
+can_view=\u1000\u103c\u100a\u103a\u1037\u101b\u103e\u102f\u1014\u102d\u102f\u1004\u103a\u101e\u100a\u103a
+chart=Chart
+classes_method=Classes / method
+clear=\u101b\u103e\u1004\u103a\u1038\u101c\u1004\u103a\u1038\u101e\u100a\u103a
+clear_map=Clear map
+clustering=Clustering
+code=\u1000\u102f\u1012\u103a
+color_scale=Color scale
+coordinate_field=Coordinate field
+coordinates=Coordinates
+coordinates_could_not_be_loaded=Coordinates could not be loaded
+count=\u1021\u101b\u1031\u1021\u1010\u103d\u1000\u103a
+create=Create
+created_by=Created by
+current_legends=Current legends
+daily=\u1014\u1031\u1037\u1005\u1009\u103a
+data=\u1021\u1001\u103b\u1000\u103a\u1021\u101c\u1000\u103a
+data_and_periods=Data and periods
+dataelement=\u1021\u1001\u103b\u1000\u103a\u1021\u101c\u1000\u103a\u1019\u103b\u102c\u1038
+dataelement_group=data element \u1021\u102f\u1015\u103a\u1005\u102f
+dataset=Dataset
+delete=\u1016\u103b\u1000\u103a\u1015\u102b\u104b
+delete_favorite=favourite \u1000\u102d\u102f\u1016\u103b\u1000\u103a\u1015\u102b\u104b
+details=\u1021\u101e\u1031\u1038\u1005\u102d\u1010\u103a\u1019\u103b\u102c\u1038
+download=Download
+download_map_as_png=Download map as PNG
+drill_down_one_level=Drill down one level
+drill_up_one_level=Drill up one level
+duplicate=Duplicate
+earthengine_layer=Google Earth Engine
+earth_engine_layer_legend=Google Earth Engine legend
+elevation=Elevation
+edit_layer=Edit layer
+edit_legend=Edit legend
+email=Email
+end_date=\u1015\u103c\u102e\u1038\u1006\u102f\u1036\u1038\u101e\u100a\u1037\u103a\u101b\u1000\u103a\u1005\u103d\u1032
+end_value_should_be_bigger_than_start_value=End value should be bigger than start value
+equal_counts=Equal counts
+equal_intervals=Equal intervals
+event_data_item=Event data item
+event_data_items=Event data items
+event_layer=Event layer
+event_location=Event location
+event_time=Event time
+external_layer=External layer
+external_layer_legend=External layer legend
+facility_layer=Facility layer
+facility_layer_export_currently_not_supported=Facility layer export currently not supported
+facility_layer_legend=Facility layer legend
+favorite_name=Favorite name
+favorite_outdated_create_new=Favorite is outdated - please create a new one
+favorites=Favorites
+filter=\u1005\u1005\u103a\u1001\u103b\u1015\u102b\u104b
+filter_by_value=Filter by value
+financial_april=Financial year (Start April)
+financial_july=Financial year (Start July)
+financial_oct=Financial year (Start October)
+google_hybrid=Google Hybrid
+google_streets=Google Streets
+go_to_charts=Go to charts
+go_to_pivot_tables=Go to pivot tables
+greater_than=\u1011\u1000\u103a\u1000\u103c\u102e\u1038\u101e\u100a\u103a\u104b
+group=\u1021\u102f\u1015\u103a\u1005\u102f
+group_nearby_events=Group nearby events
+groups=Groups
+groupset=Group set
+has_no_orgunits=has no organisation units
+high_color_size=High color / size
+highlight_color=Highlight color
+high_size=High size
+home=\u1015\u1004\u103a\u1019\u1005\u102c\u1019\u103b\u1000\u103a\u1014\u103e\u102c
+indicator=\u1021\u100a\u103d\u103e\u1014\u103a\u1038
+indicator_group=indicator \u1021\u102f\u1015\u103a\u1005\u102f
+information=Information
+infrastructural_data=Infrastructural data
+invalid_parameter=Invalid parameter
+item_type=Item type
+landcover=Landcover
+last_2_sixmonths=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c(\u1042\u1000\u103c\u102d\u1019\u103a)
+last_3_months=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c
+last_4_quarters=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c\u1000
+last_4_weeks=Last 4 weeks
+last_5_financial_years=Last 5 financial years
+last_6_bimonths=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c(\u1042\u1000\u103c\u102d\u1019\u103a)
+last_6_months=Last 6 months
+last_12_months=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c
+last_12_weeks=Last 12 weeks
+last_52_weeks=Last 52 weeks
+last_bimonth=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c\u1000
+last_financial_year=Last financial year
+last_month=\u101a\u1001\u1004\u103a\u101c
+last_quarter=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1043\u101c\u1000
+last_sixmonth=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c\u1000
+last_week=Last week
+last_5_years=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1045 \u1014\u103e\u1005\u103a
+last_year=\u101a\u1001\u1004\u103a\u1014\u103e\u1005\u103a
+latitude=Latitude
+layer=Layer
+layers=Layers
+layer_stack_transparency=Layer stack / opacity
+legend_name=Legend name
+legend_name_is_required=Legend name is required
+legends=Legends
+legendset=Legend set
+legend_sets_available=legend sets available
+legend_set_name=Legend set name
+legendsets=Legend sets
+legend_symbolizer=Symbolizer
+legend_type=Legend type
+level=Level
+longitude=Longitude
+low_color_size=Low color / size
+low_size=Low size
+manage_favorites=favorites \u1005\u102e\u1005\u1009\u103a\u1015\u102b\u104b
+map=Map
+max=\u1021\u1019\u103b\u102c\u1038\u1006\u102f\u1036\u1038
+min=\u1021\u1014\u100a\u103a\u1038\u1006\u102f\u1036\u1038
+min_max_c=Min/max °C
+min_max_elevation=Min/max elevation
+min_max_people=Min/max people
+min_max_rainfall=Min/max rainfall
+min_max_value=Min/max value
+monthly=Monthly
+name=\u1021\u1019\u100a\u103a
+next=\u101b\u103e\u1031\u1037\u101e\u102d\u102f\u1037
+nighttime_lights=Nighttime lights
+no=Nr
+no_groupset_selected=No group set selected
+no_map_to_save=No map to save
+none=\u1010\u1005\u103a\u1001\u102f\u1019\u103e\u1019\u101f\u102f\u1010\u103a
+no_event_coordinates_found=No event coordinates found
+no_organisation_unit_levels=No organisation unit levels
+no_organisation_units_specified=No organisation units specified
+no_period_selected=No period selected
+no_program_stage_selected=No program stage selected
+no_selected_items=No selected items
+no_system_info_found=No system info found
+no_valid_coordinates_found=No valid coordinates found
+open_last_chart=Open last chart
+open_last_table=Open last table
+openstreetmap=OpenStreetMap
+open_this_map_as_chart=Open this map as chart
+open_this_map_as_table=Open this map as table
+options=Options
+organisation_unit=\u1021\u1016\u103d\u1032\u1037\u1021\u1005\u100a\u103a\u1038\u101a\u1030\u1014\u1005\u103a
+organisation_unit_group_icons=Organisation unit group icons
+organisationunit_groupset=Organisation unit group set
+organisation_units=\u1021\u1016\u103d\u1032\u1037\u1021\u1005\u100a\u103a\u1038\u101a\u1030\u1014\u1005\u103a
+organisationunit_search=Organisation unit search
+osm_light=OSM Light
+overwrite=Overwrite
+overwrite_favorite=Overwrite favorite
+page=Page
+parent_unit=Parent unit
+period=\u1000\u102c\u101c/\u1015\u102d\u102f\u1004\u103a\u1038\u1001\u103c\u102c\u1038
+period_type=\u1000\u102c\u101c\u1021\u1019\u103b\u102d\u102f\u1038\u1021\u1005\u102c\u1038
+phone_number=Phone number
+placement=Placement
+please_create_map_first=Please create a map first
+please_enter_a_name=Please enter a name
+please_enter_map_title=Please enter a map title
+point_color=Point color
+point_radius=Point radius
+population_density=Population density
+precipitation=Precipitation
+predefined=Predefined
+previous=\u1014\u1031\u102c\u1000\u103a\u101e\u102d\u102f\u1037
+program=Program
+program_indicators=Program indicators
+public_access=Public access
+quarterly=Quarterly
+relative=\u1006\u1000\u103a\u1005\u1015\u103a\u1019\u103e\u102f
+relocate=Relocate
+relocate_facility=Relocate facility
+remove=\u1016\u101a\u103a\u101b\u103e\u102c\u1038\u1001\u103c\u1004\u103a\u1038
+rename=\u1021\u1019\u100a\u103a\u1015\u103c\u1031\u102c\u1004\u103a\u1038\u1001\u103c\u1004\u103a\u1038
+reporting_rates=Reporting rates
+revision=Revision
+search=Search
+search_for_favorites=Search for favorites
+search_for_user_groups=\u1021\u101e\u102f\u1036\u1038\u1015\u103c\u102f\u101e\u1030\u1021\u102f\u1015\u103a\u1005\u102f\u1019\u103b\u102c\u1038\u1000\u102d\u102f\u101b\u103e\u102c\u101e\u100a\u103a
+select=\u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1015\u102b\u104b
+select_groups=Select groups
+selection_mode=Selection mode
+select_dataset=Select dataset
+select_layer=Select layer
+select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_levels=Select levels
+select_organisation_unit_groups=Select organisation unit groups
+select_organisation_unit_levels=Select organisation unit levels
+select_organisation_units=Select organisation units
+select_period=\u1021\u1001\u103b\u102d\u1014\u103a\u1000\u102c\u101c\u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1015\u102b\u104b
+select_program=Select Program
+select_service=Select service
+select_stage=Select stage
+select_sub_units=Select sub-units
+select_year=Select year
+service_url=Service URL
+share=Share
+share_with_other_people=Share with others
+sharing_settings=\u1005\u102c\u101b\u1004\u103a\u1038\u1010\u100a\u103a\u1006\u1031\u102c\u1000\u103a\u1011\u102c\u1038\u101e\u100a\u103a\u1037\u1021\u1014\u1031\u1021\u1011\u102c\u1038\u1000\u102d\u102f\u1019\u103b\u103e\u101d\u1031\u1001\u103c\u1004\u103a\u1038
+show=Show
+show_circular_area=Show circular area with radius (m)
+show_information_sheet=Show information
+show_lon_lat=Show longitude/latitude
+sixmonthly=\u1001\u103c\u1031\u102c\u1000\u103a\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
+sixmonthly_april=Six-monthly April
+stage=Stage
+start_date=\u1005\u1010\u1004\u103a\u101e\u100a\u1037\u103a\u101b\u1000\u103a\u1005\u103d\u1032
+start_end_dates=Start/end dates
+start_end_value=Start/end value
+stddev=Standard deviation
+steps=Steps
+style=\u1015\u102f\u1036\u1005\u1036
+sub_units=Sub-units
+sub_x2_units=Sub-x2-units
+sum=\u1005\u102f\u1005\u102f\u1015\u1031\u102b\u1004\u103a\u1038
+swap_lon_lat=Swap longitude/latitude
+symbol_layer=Facility layer
+table=Table
+temperature=Temperature
+text_filter=Text filter
+thematic_layer=Thematic layer
+thematic_layer_1_legend=Thematic layer 1 legend
+thematic_layer_2_legend=Thematic layer 2 legend
+thematic_layer_3_legend=Thematic layer 3 legend
+thematic_layer_4_legend=Thematic layer 4 legend
+this_bimonth=This bi-month
+this_financial_year=This financial year
+this_month=This month
+this_quarter=This quarter
+this_sixmonth=This six-month
+this_week=This week
+this_year=\u1012\u102e\u1014\u103e\u1005\u103a
+time_since_last_data_update=Elapsed time since last data update
+today=Today
+totals=Totals
+update=\u1015\u103c\u1004\u103a\u1006\u1004\u103a\u1019\u103d\u1019\u103a\u1038\u1019\u1036\u1015\u102b\u104b
+username=User name
+user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+user_organisation_unit=User organisation unit
+user_ou=User OU
+user_sub_units=User sub-units
+user_sub_x2_units=User sub-x2-units
+value=\u1010\u1014\u103a\u1016\u102d\u102f\u1038
+value_type=\u1010\u1014\u103a\u1016\u102d\u102f\u1038\u1021\u1019\u103b\u102d\u102f\u1038\u1021\u1005\u102c\u1038
+variance=Variance
+version=\u1011\u102f\u1010\u103a\u101d\u1031\u101e\u100a\u103a\u1037\u1021\u1000\u103c\u102d\u1019\u103a
+weekly=\u1021\u1015\u1010\u103a\u1005\u1009\u103a
+weekly_wednesday=Weekly (Start Wednesday)
+weekly_thursday=Weekly (Start Thursday)
+weekly_saturday=Weekly (Start Saturday)
+weekly_sunday=Weekly (Start Sunday)
+write_interpretation=Write interpretation
+write_your_interpretation=Write your interpretation
+yearly=Yearly
+yes=\u1019\u103e\u1014\u103a
+yesterday=Yesterday
+you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
