--- a/i18n/i18n_app_tet.properties
+++ b/i18n/i18n_app_tet.properties
@@ -1,58 +1,58 @@
-about=Acerca
+about=Konabá
 add_legend=Add legend
-add_new=Novo
-address=Endereço
-add_to_dashboard=Adicionar ao painel de instrumentos
-aggregation_type=Aggregation type
-allow_external_access=Allow external access
+add_new=Aumenta foun
+address=Enderesu
+add_to_dashboard=Add to dashboard
+aggregation_type=Tipu agregasaun
+allow_external_access=Permite asesu externu
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automático
+automatic=Automatic
 average=Média
 bimonthly=Bimensal
-boundary_layer=Camada limite
-by_data_element=By data element
-cancel=Cancelar
-can_edit_and_view=Consegue Editar e Visualizar
-can_view=Consegue ver
-chart=Gráfico
+boundary_layer=Boundary layer
+by_data_element=Tuir elementu dadus
+cancel=Kansela
+can_edit_and_view=Bele edita i haré
+can_view=Bele haré
+chart=Gráfiku
 classes_method=Classes / method
-clear=Limpar
+clear=Hamós
 clear_map=Clear map
 clustering=Clustering
-code=Código
+code=Kódigu
 color_scale=Color scale
 coordinate_field=Coordinate field
-coordinates=Coordenadas
+coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Contagem
-create=Criar
-created_by=Created by
+count=Konta
+create=Kria
+created_by=Kria husi
 current_legends=Current legends
-daily=Diariamante
-data=Dados
+daily=Diáriu
+data=Dadus
 data_and_periods=Data and periods
-dataelement=Elemento de dado
-dataelement_group=Grupo de elementos de dados
-dataset=Conjunto de dados
-delete=Apagar
-delete_favorite=Excluir favorito
-details=Detalhes
-download=Baixar
+dataelement=Elementu dadus
+dataelement_group=Data element group
+dataset=Pakote dadus
+delete=Soe
+delete_favorite=Soe favoritu
+details=Detalles
+download=Hatun
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
-duplicate=Duplicado
+duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
-edit_layer=Editar camadas
+edit_layer=Edit layer
 edit_legend=Edit legend
-email=E-mail
-end_date=Data fim
+email=Email
+end_date=Data remata
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
-equal_intervals=Intervalos iguais
+equal_intervals=Equal intervals
 event_data_item=Event data item
 event_data_items=Event data items
 event_layer=Event layer
@@ -60,76 +60,76 @@ event_location=Event location
 event_time=Event time
 external_layer=External layer
 external_layer_legend=External layer legend
-facility_layer=Camada de US
+facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
 facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite is outdated - please create a new one
-favorites=Favoritos
-filter=Filtro
+favorites=Favoritus
+filter=Filtru
 filter_by_value=Filter by value
-financial_april=Financial year (Start April)
-financial_july=Financial year (Start July)
-financial_oct=Financial year (Start October)
+financial_april=Abril finanseiru
+financial_july=Jullu finanseiru
+financial_oct=Outubru finanseiru
 google_hybrid=Google Hybrid
 google_streets=Google Streets
-go_to_charts=Go to charts
-go_to_pivot_tables=Go to pivot tables
-greater_than=Maior do que
-group=Grupo
+go_to_charts=Bá gráfikus
+go_to_pivot_tables=Bá tabela dinámika
+greater_than=Greater than
+group=Group
 group_nearby_events=Group nearby events
-groups=Grupos
-groupset=Conjunto do grupo
-has_no_orgunits=não tem unidades organizacional
+groups=Groups
+groupset=Group set
+has_no_orgunits=has no organisation units
 high_color_size=High color / size
-highlight_color=Realce as cores
+highlight_color=Highlight color
 high_size=High size
-home=Origem
-indicator=Indicador
-indicator_group=Grupo do indicador
+home=Pájina inisial
+indicator=Indikador
+indicator_group=Indicator group
 information=Information
-infrastructural_data=Dados de infra-estrutura
+infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Dois últimos semestres
-last_3_months=Últimos 3 meses
-last_4_quarters=Últimos 4 trimestres
-last_4_weeks=Últimas 4 semanas
-last_5_financial_years=Últimos 5 anos financeiros
-last_6_bimonths=Últimos 6 bi-meses
-last_6_months=Últimos 6 meses
-last_12_months=Últimos 12 meses
-last_12_weeks=Últimoas 12 semanas
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=último ano financeiro
-last_month=Mês passado
-last_quarter=Último trimestre
-last_sixmonth=Últimos 6 meses
-last_week=Última semana
-last_5_years=Últimos 5 anos
-last_year=Ano passado
+last_2_sixmonths=Fulan-nén 2 ikus
+last_3_months=Fulan 3 ikus
+last_4_quarters=Trimestre 4 ikus liu
+last_4_weeks=Semana 4 ikus
+last_5_financial_years=Tinan finanseiru 5 ikus
+last_6_bimonths=Bimensal 6 ikus liu
+last_6_months=Fulan 6 ikus
+last_12_months=Fulan 12 ikus
+last_12_weeks=Semana 12 ikus
+last_52_weeks=Semana 52 ikus
+last_bimonth=Bimensal kotuk
+last_financial_year=Tinan finanseiru kotuk
+last_month=Fulan kotuk
+last_quarter=Trimestre kotuk
+last_sixmonth=Fulan-nén ikus
+last_week=Semana kotuk
+last_5_years=Tinan 5 kotuk
+last_year=Tinan kotuk
 latitude=Latitude
-layer=Camada
+layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
-legends=Legendas
-legendset=Conjunto da legenda
+legends=Legends
+legendset=Pakote lejendas
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Tipo de legenda
-level=Nivel
+legend_type=Legend type
+level=Level
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=Gerir favoritos
+manage_favorites=Jere favoritus
 map=Mapa
-max=Máx
+max=Max
 min=Min
 min_max_c=Min/max Â°C
 min_max_elevation=Min/max elevation
@@ -137,13 +137,13 @@ min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Mensal
-name=Nome
-next=Próximo
+name=Naran
+next=Próximu
 nighttime_lights=Nighttime lights
-no=não
+no=Lae
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=Nenhum
+none=Nein ida
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -152,116 +152,116 @@ no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
 no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Open last chart
-open_last_table=Open last table
+open_last_chart=Loke gráfiku ikus
+open_last_table=Loke tabela ikus
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Opções
-organisation_unit=Unidade organizacional
+options=Opsoens
+organisation_unit=Unidade organizasional
 organisation_unit_group_icons=Organisation unit group icons
-organisationunit_groupset=Conjunto de Grupo Unidade Organizacional
-organisation_units=Unidades organizacionais
-organisationunit_search=Busca de unidade organizacional
+organisationunit_groupset=Organisation unit group set
+organisation_units=Unidade organizasional
+organisationunit_search=Organisation unit search
 osm_light=OSM Light
-overwrite=Sobrescrever
-overwrite_favorite=Overwrite favorite
+overwrite=Hakerek sae leten
+overwrite_favorite=Hakerek sae favoritu nia leten
 page=Page
 parent_unit=Parent unit
-period=Periodo
-period_type=Tipo de periodo
-phone_number=Número de telefone
+period=Períodu
+period_type=Period type
+phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
-please_enter_a_name=Por favor, indique um nome
-please_enter_map_title=Digite um título do mapa
+please_enter_a_name=Please enter a name
+please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
-predefined=Predefinido
-previous=Previous
-program=Programa
+predefined=Predefined
+previous=Anterior
+program=Program
 program_indicators=Program indicators
-public_access=Public access
+public_access=Asesu públiku
 quarterly=Trimestral
-relative=Relativo
-relocate=Realocar
+relative=Relativu
+relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remover
-rename=Renomear
-reporting_rates=Taxas de relatório
+remove=Hasai
+rename=Tau naran foun
+reporting_rates=Taxas relatóriu
 revision=Revision
-search=Pesquisar
-search_for_favorites=Search for favorites
-search_for_user_groups=Pesquisar por grupos de utilizadores
-select=Seleccione
+search=Search
+search_for_favorites=Buka favoritus
+search_for_user_groups=Buka grupu utilizadores
+select=Selesiona
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Select levels
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
-select_organisation_units=Select organisation units
-select_period=Seleccione o período
-select_program=Seleccione Programa
+select_organisation_unit_groups=Hili grupus unidades organizasionais
+select_organisation_unit_levels=Hili níveis unidades organizasionais
+select_organisation_units=Hili unidades organizasionais
+select_period=Hili períodu
+select_program=Select program
 select_service=Select service
 select_stage=Select stage
-select_sub_units=Select sub-units
+select_sub_units=Hilit sub-unidades
 select_year=Select year
 service_url=Service URL
-share=Partilhar
+share=Partilla
 share_with_other_people=Share with others
-sharing_settings=Definições de partilha
-show=Mostrar
+sharing_settings=Definisoens partilla
+show=Hatudu
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Mostrar folha de informação
+show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
 sixmonthly=Semestral
-sixmonthly_april=Six-monthly April
+sixmonthly_april=Abril semestral
 stage=Stage
-start_date=Data inicio
-start_end_dates=Datas Iniciar-fim
+start_date=Data hahú
+start_end_dates=Start/end dates
 start_end_value=Start/end value
-stddev=Standard deviation
+stddev=Dezviu padraun
 steps=Steps
-style=Estílo
+style=Estilu
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=Soma
 swap_lon_lat=Swap longitude/latitude
-symbol_layer=Camada da US
-table=Table
+symbol_layer=Facility layer
+table=Tabela
 temperature=Temperature
-text_filter=Filtro do texto
-thematic_layer=Camada temática
+text_filter=Text filter
+thematic_layer=Thematic layer
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
-this_financial_year=This financial year
+this_financial_year=Tinan finanseiru ida ne'e
 this_month=This month
 this_quarter=This quarter
 this_sixmonth=This six-month
 this_week=This week
-this_year=Este ano
+this_year=Tina ida ne'e
 time_since_last_data_update=Elapsed time since last data update
-today=Hoje
+today=Today
 totals=Totais
-update=Actualizar
-username=Nome de utilizador
+update=Atualiza
+username=Utilizador nia Naran
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
-value=Valor
-value_type=Tipo de Valor
-variance=Variance
-version=Versão
+user_sub_units=Utilizador nia  sub-unidades
+user_sub_x2_units=Utilizador nia sub-x2-unidades
+value=Value
+value_type=Tipu Valor
+variance=Variasaun
+version=Versaun
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Anual
 yes=Sim
-yesterday=Ontém
+yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
-you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
+you_do_not_have_access_to_all_items_in_this_favorite=Itabo'ot la iha asesu ba items hotu iha fovoritu ida ne'e
 
