30fb9ec chore(translations): sync TetumTetun translations from transifex (master)

--- a/i18n/i18n_app_tet.properties
+++ b/i18n/i18n_app_tet.properties
@@ -258,7 +258,7 @@ user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=Utilizador nia  sub-unidades
 user_sub_x2_units=Utilizador nia sub-x2-unidades
-value=Value
+value=Valor
 value_type=Tipu Valor
 variance=Variasaun
 version=Versaun
