9d8ba24 chore(translations): sync Burmese translations from transifex (master)

--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -184,7 +184,7 @@ previous=\u1014\u1031\u102c\u1000\u103a\u101e\u102d\u102f\u1037
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=\u101e\u102f\u1036\u1038\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
 relative=\u1006\u1000\u103a\u1005\u1015\u103a\u1019\u103e\u102f
 relocate=Relocate
 relocate_facility=Relocate facility
