3e40f13 chore(translations): sync Spanish translations from transifex (master)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -181,7 +181,7 @@ population_density=Densidad de población
 precipitation=Precipitación
 predefined=Predefinido
 previous=Previous
-program=Program
+program=Programa
 program_indicators=Indicadores de programa
 public_access=Acceso público
 quarterly=Trimestral
