31d88fe chore(translations): sync PersianAfghanistan translations from transifex (master)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -181,7 +181,7 @@ population_density=Densidad de población
 precipitation=Precipitación
 predefined=Predefinido
 previous=Previous
-program=Programa
+program=Program
 program_indicators=Indicadores de programa
 public_access=Acceso público
 quarterly=Trimestral
